# LOCM3Gen

./: .gitignore  App.xaml  App.xaml.cs  Configuration.cs  Generator.cs  GeneratorModel.cs  LICENSE.txt  LOCM3Gen.csproj  LOCM3Gen.sln  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  ProjectParameters.cs  README.md  TemplateFormatter.cs
Environments/: CLion.xml  CMake.xml  EmBitz.xml  None.xml
Families/: STM32F0.xml  STM32F1.xml  STM32F2.xml  STM32F3.xml  STM32F4.xml  STM32F7.xml  STM32G0.xml  STM32L0.xml  STM32L1.xml  STM32L4.xml
GUI/: MainForm.Designer.cs  MainForm.cs
LOCM3Gen/: AssemblyInfo.cs  Configuration.cs  CopyRoute.cs  Environment.cs  Family.cs  GeneratorSettings.cs  LOCM3Gen.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  ProjectGenerator.cs  TemplateFormatter.cs
LOCM3Gen/Environments/: EmBitz.xml
LOCM3Gen/Families/: STM32F0.xml  STM32F1.xml  STM32F2.xml  STM32F3.xml  STM32F4.xml  STM32F7.xml  STM32L0.xml  STM32L1.xml  STM32L4.xml
LOCM3Gen/GUI/: MainForm.cs
LOCM3Gen/Properties/: AssemblyInfo.cs
LOCM3Gen/Templates/STM32F3/: main.c
Properties/: AssemblyInfo.cs
SourceGen/: ActionMethods.cs  ActionNameAttribute.cs  ActionParameterAttribute.cs  ActionsMethods.cs  EmBitz.xml  STM32F0.xml  ScriptAction.cs  ScriptDataContext.cs  ScriptException.cs  ScriptReader.cs
SourceGen/ScriptActions/: Copy.cs  CopyAction.cs  DeleteAction.cs  If.cs  IfAction.cs  List.cs  ListAction.cs  Parse.cs  ParseAction.cs  RunAction.cs  Unzip.cs  UnzipAction.cs  Var.cs  VarAction.cs
Templates/: linker.ld
Templates/CLion/: openocd.cfg
Templates/CMake/: CMakeLists.txt
Templates/EmBitz/: project.ebp
Templates/project/: main.c  main.h
(+5 files in other folders)
